card now flips in Safari on the desktop and the back of the card is visible.  Tested pm on a kindle Fire and the card flips both ways with no issue.  On iOS, the card does not flip back to the front of the card unless the next button is clicked.

--- a/cards.css
+++ b/cards.css
@@ -29,7 +29,6 @@ header {
 	transform-style: preserve-3d;
 	-webkit-transition: -webkit-transform all .8s ease-in-out;
 	transition: all 2.2s ease-in-out;
-	background-color: rgb(255, 229, 3);
 	box-shadow: 0px 6px 10px #4f2c50;
 	border-radius: 30px;
 }
@@ -37,29 +36,31 @@ header {
 
 .card:hover {
 	-ms-transform: rotateY(180deg);
-	-webkit-transform: rotateY(180deg);
+	-webkit-transform: rotateX(180deg);
 	-moz-transform: rotateY(180deg);
 	-o-transform: rotateY(180deg);
-	transform: rotateY(180deg);
+	transform: rotateX(360deg) rotateY(-180deg) rotateY(-180deg) rotateX(-180deg) rotateX(180deg) rotateY(180deg);
 	/*transition: all 2.2s ease-in-out;*/
 	border: 6px solid rgb(255, 229, 3);
 }
 
 #front_nine {
 	position: absolute;
-	height: 298px;
-	width: 67%;
+	height: 400px;
+	width: 300px;
 	backface-visibility: hidden; 
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
 	overflow: hidden;
-	text-align: right;
+	text-align: center;
+	background-color: rgb(255, 229, 3);
 	color: #333;
 	font-size: 5.3em;
 	/*margin:auto;*/
-	padding-top: 15%;
+	/*padding-top: 15%;*/
 	color: rgb(112, 20, 127);
+	border-radius: 30px;
 }
 
 #back_nine {
@@ -75,26 +76,46 @@ header {
 	color: #ffe503;
 	/*margin:auto;*/
 	font-size: 1.5em;
-	background-color: rgb(112, 20, 127);
+	background-color: #70147f;
 	border-radius: 30px;
 	display:block;
 }
 
+#multiplier {
+	margin:auto;
+	width:128px;
+	position:relative;
+	text-align:right;
+	top:10%;
+	right: 0%;
+	overflow: hidden;
+}
+
 #line {
-	width: 104%;
-	text-align: right;
+	width: 61%;
+	margin:auto;
 }
 
 hr {
 	height: 1px;
 	border: 3px solid;
-	margin: 0em 11px 9px 111px;
+	/*margin: 0em 11px 9px 111px;*/
 	padding: 0;
 }
 
+#operator {
+	position:relative;
+	bottom: -10%;
+}
 
 #product {
-
+	margin:auto;
+	width:128px;
+	position:relative;
+	text-align:right;
+	top:-10%;
+	right: 0%;
+	overflow: hidden;
 }
 
 #stars {
